Dodate funkcionalnosti dodavanja korisnika na forume